--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Cambridge-natural-history-Vol-08-of-10_73885
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73885-h/images/cover.jpg
 creator:
   author:
     agent_name: Gadow, Hans
@@ -26,6 +29,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/44635
     wikipedia: https://en.wikipedia.org/wiki/Arthur_Shipley
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73885#The-Cambridge-natural-history-Vol-08-of-10
 gutenberg_issued: '2024-06-21'
 gutenberg_type: Text
 identifiers:
